update home page

--- a/home.html
+++ b/home.html
@@ -66,8 +66,29 @@
       </div>
 
       <div class="d-flex gap-3 align-items-center">
-        <button class="btn btn-light btn-sm px-3">Profile</button>
-        <a href="#" class="text-white fw-bold text-decoration-none">Logout ↩</a>
+        <button
+          class="btn btn-sm d-flex align-items-center gap-2 px-3"
+          style="background: transparent; border: 2px solid white; color: white"
+        >
+          <span>Profile</span>
+          <img
+            src="assets/img/profile-icon.png"
+            alt="user icon"
+            style="height: 16px; filter: brightness(0) invert(1)"
+          />
+        </button>
+
+        <a
+          href="#"
+          class="text-white fw-bold text-decoration-none d-flex align-items-center gap-2"
+        >
+          <span>Logout</span>
+          <img
+            src="assets/img/logout-icon.png"
+            alt="logout icon"
+            style="height: 16px"
+          />
+        </a>
       </div>
     </nav>
 
@@ -101,18 +122,14 @@
           <div
             class="course-card"
             style="background-image: url('assets/img/copy-card.png')"
-          >
-            COPYWRITING
-          </div>
+          ></div>
         </div>
 
         <div class="col-md-3 col-6">
           <div
             class="course-card"
             style="background-image: url('assets/img/research-card.png')"
-          >
-            RESEARCH / ADMIN
-          </div>
+          ></div>
         </div>
       </div>
     </div>
