update add new project

--- a/home.html
+++ b/home.html
@@ -1,182 +1,147 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Skill2Earn</title>
-    <link rel="icon" type="image/png" href="./favicon.png" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
-    ></script>
-  </head>
-  <style>
-    body {
-      background: #f3f7f8;
-    }
-    .nav-bar {
-      background: #0067d4;
-      border-radius: 20px;
-      padding: 10px 25px;
-      margin: 20px;
-    }
-    .course-card {
-      border-radius: 15px;
-      color: white;
-      font-weight: 700;
-      height: 180px;
-      display: flex;
-      align-items: flex-end;
-      padding: 20px;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      transition: transform 0.2s;
-      text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.6);
-    }
+<html lang="id">
 
-    .course-card:hover {
-      transform: scale(1.05);
-      cursor: pointer;
-    }
-  </style>
-  <body>
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg nav-bar text-white shadow px-3">
-      <div class="container-fluid">
-        <!-- Logo -->
-        <a class="navbar-brand text-white" href="#">
-          <img
-            src="assets/img/Skill2Earn.png"
-            alt="Skill2Earn Logo"
-            style="height: 22px; object-fit: contain"
-          />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home - Skill2Earn</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body class="home-body">
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <div class="nav-container">
+      <div class="nav-logo">
+        <a href="home.html" style="text-decoration: none;">
+          <h1 class="nav-brand">
+            <span class="skill-nav">Skill</span><span class="two-nav">2</span><span class="earn-nav">Earn</span>
+          </h1>
+        </a>
+      </div>
+
+      <div class="nav-menu">
+        <a href="#micro-course" class="nav-link">Micro-Course</a>
+        <a href="#tasks-list" class="nav-link">Tasks List</a>
+        <a href="ongoingTasksB.html" class="nav-link">Ongoing Tasks</a>
+      </div>
+
+      <div class="nav-actions">
+        <a href="profile.html" class="profile-btn">
+          Profile
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+            <circle cx="12" cy="8" r="4" fill="white" />
+            <path d="M4 20c0-4 3.6-7 8-7s8 3 8 7" stroke="white" stroke-width="2" fill="none" />
+          </svg>
         </a>
 
-        <!-- Hamburger Button -->
-        <button
-          class="navbar-toggler bg-light"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarContent"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <a href="index.html" class="logout-btn">
+          Logout
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+            <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4M16 17l5-5-5-5M21 12H9" stroke="white" stroke-width="2"
+              stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
+        </a>
+      </div>
+    </div>
+  </nav>
 
-        <!-- MENU -->
-        <div class="collapse navbar-collapse" id="navbarContent">
-          <!-- Center Menu -->
-          <ul class="navbar-nav mx-auto mb-2 mb-lg-0 gap-lg-4 text-center">
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Tasks List</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Ongoing Tasks</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Micro-Course</a>
-            </li>
-          </ul>
+  <!-- Main Content -->
+  <main class="home-main">
+    <!-- Micro-Course Section -->
+    <section id="micro-course" class="section-micro-course">
+      <div class="section-header">
+        <h2 class="section-title">
+          Micro-Course
+          <svg width="32" height="32" viewBox="0 0 24 24" fill="none">
+            <path d="M22 7L13.5 15.5L8.5 10.5L2 17" stroke="#0066CC" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round" />
+            <polyline points="16 7 22 7 22 13" stroke="#0066CC" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+        </h2>
+      </div>
 
-          <!-- Right Menu -->
-          <div class="d-flex align-items-center gap-3 mt-3 mt-lg-0">
-            <!-- PROFILE -->
-            <button
-              class="btn btn-sm d-flex align-items-center gap-2 px-3"
-              style="
-                background: transparent;
-                border: 2px solid white;
-                color: white;
-              "
-            >
-              <span>Profile</span>
-              <img
-                src="assets/img/profile-icon.png"
-                alt="user icon"
-                style="height: 16px; filter: brightness(0) invert(1)"
-              />
-            </button>
+      <div class="course-grid">
+        <!-- Data Entry Course -->
+        <div class="course-card course-purple">
+          <div class="course-overlay">
+            <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
+              <path d="M20 25L15 30L20 35" stroke="white" stroke-width="3" stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path d="M40 25L45 30L40 35" stroke="white" stroke-width="3" stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path d="M32 20L28 40" stroke="white" stroke-width="3" stroke-linecap="round" />
+            </svg>
+            <h3 class="course-title">DATA ENTRY</h3>
+          </div>
+        </div>
 
-            <!-- LOGOUT -->
-            <a
-              href="#"
-              class="text-white fw-bold text-decoration-none d-flex align-items-center gap-2"
-            >
-              <span>Logout</span>
-              <img
-                src="assets/img/logout-icon.png"
-                alt="logout icon"
-                style="height: 16px; filter: brightness(0) invert(1)"
-              />
+        <!-- Graphic Design Course -->
+        <div class="course-card course-blue">
+          <div class="course-overlay">
+            <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
+              <circle cx="30" cy="30" r="20" stroke="white" stroke-width="3" fill="none" />
+              <path d="M30 15L35 25L45 25L37 32L40 42L30 36L20 42L23 32L15 25L25 25L30 15Z" fill="white" />
+            </svg>
+            <h3 class="course-title">GRAPHIC<br />DESIGN</h3>
+          </div>
+        </div>
+
+        <!-- Copywriting Course -->
+        <div class="course-card course-green">
+          <div class="course-overlay">
+            <a href="micro-course.html" style="text-decoration: none;">
+              <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
+                <rect x="20" y="15" width="25" height="30" rx="2" stroke="white" stroke-width="3" fill="none" />
+                <line x1="25" y1="22" x2="40" y2="22" stroke="white" stroke-width="2" />
+                <line x1="25" y1="28" x2="40" y2="28" stroke="white" stroke-width="2" />
+                <line x1="25" y1="34" x2="35" y2="34" stroke="white" stroke-width="2" />
+              </svg>
+              <h3 class="course-title">COPYWRITING</h3>
             </a>
           </div>
         </div>
-      </div>
-    </nav>
 
-    <!-- MICRO COURSE SECTION -->
-    <div class="container mt-4">
-      <h3 class="fw-bold mb-4 d-flex align-items-center">
-        Micro-Course
-        <img
-          src="assets/img/rise-icon.png"
-          alt="arrow icon"
-          style="height: 20px; margin-left: 6px"
-        />
-      </h3>
-
-      <div class="row g-4">
-        <div class="col-md-3 col-6">
-          <div
-            class="course-card"
-            style="background-image: url('assets/img/data-card.png')"
-          ></div>
-        </div>
-
-        <div class="col-md-3 col-6">
-          <div
-            class="course-card"
-            style="background-image: url('assets/img/graphic-card.png')"
-          ></div>
-        </div>
-
-        <div class="col-md-3 col-6">
-          <div
-            class="course-card"
-            style="background-image: url('assets/img/copy-card.png')"
-          ></div>
-        </div>
-
-        <div class="col-md-3 col-6">
-          <div
-            class="course-card"
-            style="background-image: url('assets/img/research-card.png')"
-          ></div>
+        <!-- Research/Admin Course -->
+        <div class="course-card course-purple-alt">
+          <div class="course-overlay">
+            <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
+              <rect x="18" y="20" width="20" height="14" rx="2" stroke="white" stroke-width="2" fill="none" />
+              <rect x="22" y="28" width="12" height="2" fill="white" />
+              <circle cx="28" cy="24" r="1.5" fill="white" />
+              <path d="M20 34L20 38L38 38L38 34" stroke="white" stroke-width="2" />
+              <circle cx="35" cy="25" r="3" stroke="white" stroke-width="2" fill="none" />
+              <path d="M37 27L42 32" stroke="white" stroke-width="2" />
+            </svg>
+            <h3 class="course-title">RESEARCH/<br />ADMIN</h3>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
 
-    <!-- TASKS LIST SECTION -->
-    <div class="container mt-5">
-      <h3 class="fw-bold mb-4">
-        Tasks List <span class="text-primary">✔</span>
-      </h3>
-
-      <div class="text-center text-secondary fs-4" style="padding: 60px 0">
-        Complete micro-course of any skill you’re interested in to start
-        accepting tasks!
+    <!-- Tasks List Section -->
+    <section id="tasks-list" class="section-tasks-list">
+      <div class="section-header">
+        <h2 class="section-title">
+          Tasks List
+          <svg width="32" height="32" viewBox="0 0 24 24" fill="none">
+            <circle cx="12" cy="12" r="10" stroke="#0066CC" stroke-width="2" fill="none" />
+            <path d="M8 12L11 15L16 9" stroke="#0066CC" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+        </h2>
       </div>
-    </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+
+      <div class="tasks-empty">
+        <p class="tasks-message">
+          Complete micro-course of any skill you're interested in to start
+          accepting tasks!
+        </p>
+      </div>
+    </section>
+
+  </main>
+</body>
+
 </html>
