--- a/index.html
+++ b/index.html
@@ -1,39 +1,124 @@
 <!DOCTYPE html>
 <html lang="id">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Skill2Earn - Learn & Work</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Skill2Earn - Learn & Work</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+    <link rel="icon" type="image/png" href="./favicon.png" />
 
-<body>
-  <!-- Main content -->
-  <div class="main-content">
-    <!-- Logo -->
-    <div class="logo">
-      <div style="text-align:center; margin-top:40px;">
-        <img src="assets/img/logo.png" alt="Logo Skill2Earn" style="width:500px;">
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Alpine.js -->
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+    ></script>
+
+    <style>
+      body {
+        font-family: "Segoe UI", Arial, sans-serif;
+        background: #ffffff;
+      }
+
+      .logo-lg {
+        max-width: 450px;
+      }
+
+      .heading {
+        font-size: 36px;
+        font-weight: 700;
+        color: #1d2b4f;
+      }
+
+      .desc {
+        font-size: 18px;
+        color: #6c757d;
+      }
+
+      .btn-main {
+        width: 100%;
+        max-width: 400px;
+        padding: 14px;
+        font-size: 18px;
+        font-weight: 600;
+        border-radius: 10px;
+        background: #005fcc;
+        color: white;
+      }
+
+      .btn-main:hover {
+        background: #004aa3;
+      }
+
+      /* RESPONSIVE */
+      @media (max-width: 768px) {
+        .logo-lg {
+          max-width: 280px;
+        }
+        .heading {
+          font-size: 28px;
+        }
+        .desc {
+          font-size: 16px;
+        }
+      }
+      .full-center {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div
+      class="container d-flex flex-column align-items-center text-center py-5 full-center"
+    >
+      <!-- Decorative top corner images (optional if you add assets) -->
+      <!-- <div class="d-flex justify-content-between w-100 px-3 mb-3">
+        <img
+          src="assets/img/decor-left.png"
+          class="d-none d-md-block"
+          style="height: 60px"
+        />
+        <img
+          src="assets/img/decor-right.png"
+          class="d-none d-md-block"
+          style="height: 60px"
+        />
+      </div> -->
+
+      <!-- Logo -->
+      <img
+        src="assets/img/logo.png"
+        alt="Skill2Earn Logo"
+        class="logo-lg mb-4"
+      />
+
+      <!-- Heading -->
+      <h2 class="heading mb-2">Learn & Work</h2>
+
+      <!-- Description -->
+      <p class="desc mb-4">
+        Learn skills of your interests do the work<br />
+        and strive to be the best.
+      </p>
+
+      <!-- Buttons -->
+      <div class="d-flex flex-column gap-3 w-100 align-items-center">
+        <a href="login-student.html" class="btn btn-main">Enter as Student</a>
+        <a href="login-umkm.html" class="btn btn-main">Enter as UMKM</a>
       </div>
     </div>
 
-    <!-- Heading -->
-    <h2 class="heading">Learn & Work</h2>
-
-    <!-- Description -->
-    <p class="description">
-      Learn skills of your interests do the work<br />
-      and strive to be the best.
-    </p>
-
-    <!-- Buttons -->
-    <div class="button-group">
-      <a href="login-student.html" class="btn btn-primary">Enter as Student</a>
-      <a href="login-umkm.html" class="btn btn-primary">Enter as UMKM</a>
-    </div>
-  </div>
-  </div>
-</body>
-
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
