--- a/index.html
+++ b/index.html
@@ -47,12 +47,21 @@
         font-size: 18px;
         font-weight: 600;
         border-radius: 10px;
-        background: #005fcc;
+        background: #0066cc;
         color: white;
       }
 
       .btn-main:hover {
-        background: #004aa3;
+        background-color: #0052a3;
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(0, 102, 204, 0.3);
+        color: white;
+      }
+
+      .btn-main:hover {
+        background-color: #0052a3;
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(0, 102, 204, 0.3);
       }
 
       /* RESPONSIVE */
