--- a/login-umkm.html
+++ b/login-umkm.html
@@ -4,312 +4,230 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skill2Earn - Student Login</title>
+
     <link rel="icon" type="image/png" href="./favicon.png" />
+
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
     />
+
+    <!-- Alpine.js -->
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
+
+    <style>
+      body {
+        background-color: #f8f9fa;
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: system-ui, sans-serif;
+      }
+
+      .login-card {
+        background: #ffffff;
+        padding: 40px;
+        border-radius: 16px;
+        width: 100%;
+        max-width: 540px;
+        position: relative;
+      }
+
+      .back-btn {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        border: 1px solid #e5e5e5;
+        background: #fff;
+        transition: 0.2s;
+      }
+
+      .back-btn:hover {
+        transform: translateX(-4px);
+      }
+
+      .login-input {
+        padding: 16px;
+        border-radius: 12px;
+        font-size: 16px;
+        border: 2px solid #e1e1e1;
+        background: #f8f9fa;
+        transition: border 0.2s;
+      }
+
+      .login-input:focus {
+        border-color: #0066cc;
+        background: #ffffff;
+      }
+
+      .social-btn {
+        width: 70px;
+        height: 70px;
+        border-radius: 16px;
+        border: 2px solid #e0e0e0;
+        background: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: 0.2s;
+      }
+
+      .social-btn:hover {
+        border-color: #0066cc;
+        transform: translateY(-3px);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.12);
+      }
+
+      .divider {
+        text-align: center;
+        position: relative;
+        margin: 32px 0;
+      }
+
+      .divider::before {
+        content: "";
+        width: 100%;
+        height: 1px;
+        background: #ddd;
+        position: absolute;
+        top: 50%;
+        left: 0;
+      }
+
+      .divider span {
+        background: white;
+        padding: 0 12px;
+        font-size: 14px;
+        color: #7f8c8d;
+        position: relative;
+      }
+    </style>
   </head>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-        "Helvetica Neue", Arial, sans-serif;
-      background-color: #f8f9fa;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .container {
-      width: 100%;
-      max-width: 1200px;
-      padding: 20px;
-      position: relative;
-    }
-    .login-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
-    .login-content {
-      background: white;
-      padding: 40px;
-      border-radius: 16px;
-      max-width: 600px;
-      width: 100%;
-      position: relative;
-    }
-    .back-button {
-      position: absolute;
-      top: 20px;
-      left: 10px;
-      width: 40px;
-      height: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
-      transition: transform 0.2s ease;
-    }
-
-    .back-button:hover {
-      transform: translateX(-4px);
-    }
-
-    .login-heading {
-      font-size: 36px;
-      font-weight: 700;
-      color: #2c3e50;
-      margin-bottom: 12px;
-      margin-top: 20px;
-    }
-
-    .login-subheading {
-      font-size: 16px;
-      color: #95a5a6;
-      margin-bottom: 40px;
-    }
-
-    .login-form {
-      margin-bottom: 30px;
-    }
-
-    .form-group {
-      margin-bottom: 20px;
-    }
-
-    .form-input {
-      width: 100%;
-      padding: 18px 20px;
-      font-size: 16px;
-      border: 2px solid #e0e0e0;
-      border-radius: 12px;
-      outline: none;
-      transition: border-color 0.3s ease;
-      background-color: #f8f9fa;
-    }
-
-    .form-input:focus {
-      border-color: #0066cc;
-      background-color: white;
-    }
-
-    .form-input::placeholder {
-      color: #bdc3c7;
-    }
-
-    .btn {
-      display: inline-block;
-      padding: 18px 40px;
-      font-size: 20px;
-      font-weight: 600;
-      text-decoration: none;
-      border-radius: 12px;
-      transition: all 0.3s ease;
-      border: none;
-      cursor: pointer;
-      width: 100%;
-      text-align: center;
-    }
-
-    .btn-primary {
-      background-color: #0066cc;
-      color: white;
-    }
-
-    .btn-primary:hover {
-      background-color: #0052a3;
-      transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(0, 102, 204, 0.3);
-    }
-    .btn-full {
-      width: 100%;
-    }
-
-    .divider {
-      position: relative;
-      text-align: center;
-      margin: 30px 0;
-    }
-
-    .divider::before {
-      content: "";
-      position: absolute;
-      left: 0;
-      top: 50%;
-      width: 100%;
-      height: 1px;
-      background-color: #e0e0e0;
-    }
-
-    .divider span {
-      position: relative;
-      background-color: white;
-      padding: 0 20px;
-      color: #95a5a6;
-      font-size: 14px;
-    }
-
-    .social-login {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-bottom: 30px;
-    }
-
-    .social-btn {
-      width: 70px;
-      height: 70px;
-      border: 2px solid #e0e0e0;
-      border-radius: 16px;
-      background-color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-
-    .social-btn:hover {
-      border-color: #0066cc;
-      transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-
-    .terms {
-      text-align: center;
-      font-size: 14px;
-      color: #7f8c8d;
-      line-height: 1.6;
-    }
-
-    .terms a {
-      color: #2c3e50;
-      text-decoration: underline;
-    }
-
-    .terms a:hover {
-      color: #0066cc;
-    }
-  </style>
 
   <body>
-    <div class="container login-container">
-      <div class="login-content">
-        <!-- Back button -->
-        <a href="index.html" class="back-button">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+    <div class="login-card shadow">
+      <!-- Back Button -->
+      <a href="index.html" class="back-btn">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+          <path
+            d="M19 12H5M5 12L12 19M5 12L12 5"
+            stroke="#000"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </a>
+
+      <!-- Heading -->
+      <h2 class="fw-bold mt-4">Log in or sign up</h2>
+      <p class="text-muted mb-4">Enter your Email to log in or sign up</p>
+
+      <!-- Form -->
+      <form action="user-detail-umkm.html">
+        <div class="mb-3">
+          <input
+            type="email"
+            class="form-control login-input"
+            placeholder="Email"
+            required
+          />
+        </div>
+
+        <div class="mb-3">
+          <input
+            type="password"
+            class="form-control login-input"
+            placeholder="Password"
+            required
+          />
+        </div>
+
+        <button class="btn btn-primary w-100 py-2 mt-2">Continue</button>
+      </form>
+
+      <!-- Divider -->
+      <div class="divider"><span>or</span></div>
+
+      <!-- Social Login -->
+      <div class="d-flex justify-content-center gap-3 mb-3">
+        <!-- Google -->
+        <button class="social-btn">
+          <svg width="24" height="24" viewBox="0 0 24 24">
             <path
-              d="M19 12H5M5 12L12 19M5 12L12 5"
-              stroke="#000"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
+              d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
+              fill="#4285F4"
+            />
+            <path
+              d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
+              fill="#34A853"
+            />
+            <path
+              d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
+              fill="#FBBC05"
+            />
+            <path
+              d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
+              fill="#EA4335"
             />
           </svg>
-        </a>
+        </button>
 
-        <!-- Heading -->
-        <h2 class="login-heading">Log in or sign up</h2>
-        <p class="login-subheading">Enter your Email to log in or sign up</p>
+        <!-- Apple -->
+        <button class="social-btn">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="#000">
+            <path
+              d="M17.05 20.28c-.98.95-2.05.8-3.08.35-1.09-.46-2.09-.48-3.24 0-1.44.62-2.2.44-3.06-.35C2.79 15.25 3.51 7.59 9.05 7.31c1.35.07 2.29.74 3.08.8 1.18-.24 2.31-.93 3.57-.84 1.51.12 2.65.72 3.4 1.8-3.12 1.87-2.38 5.98.48 7.13-.57 1.5-1.31 2.99-2.54 4.09l.01-.01zM12.03 7.25c-.15-2.23 1.66-4.07 3.74-4.25.29 2.58-2.34 4.5-3.74 4.25z"
+            />
+          </svg>
+        </button>
 
-        <!-- Login form -->
-        <form class="login-form" action="user-detail-umkm.html">
-          <div class="form-group">
-            <input type="email" class="form-input" placeholder="Email" />
-          </div>
-
-          <div class="form-group">
-            <input type="password" class="form-input" placeholder="Password" />
-          </div>
-
-          <button type="submit" class="btn btn-primary btn-full">
-            Continue
-          </button>
-        </form>
-
-        <!-- Divider -->
-        <div class="divider">
-          <span>or</span>
-        </div>
-
-        <!-- Social login -->
-        <div class="social-login">
-          <button class="social-btn">
-            <svg width="24" height="24" viewBox="0 0 24 24">
-              <path
-                d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
-                fill="#4285F4"
-              />
-              <path
-                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
-                fill="#34A853"
-              />
-              <path
-                d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
-                fill="#FBBC05"
-              />
-              <path
-                d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
-                fill="#EA4335"
-              />
-            </svg>
-          </button>
-
-          <button class="social-btn">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="#000">
-              <path
-                d="M17.05 20.28c-.98.95-2.05.8-3.08.35-1.09-.46-2.09-.48-3.24 0-1.44.62-2.2.44-3.06-.35C2.79 15.25 3.51 7.59 9.05 7.31c1.35.07 2.29.74 3.08.8 1.18-.24 2.31-.93 3.57-.84 1.51.12 2.65.72 3.4 1.8-3.12 1.87-2.38 5.98.48 7.13-.57 1.5-1.31 2.99-2.54 4.09l.01-.01zM12.03 7.25c-.15-2.23 1.66-4.07 3.74-4.25.29 2.58-2.34 4.5-3.74 4.25z"
-              />
-            </svg>
-          </button>
-
-          <button class="social-btn">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="#000">
-              <rect
-                x="3"
-                y="5"
-                width="18"
-                height="14"
-                rx="2"
-                stroke="#000"
-                stroke-width="2"
-                fill="none"
-              />
-              <path
-                d="M3 7L12 13L21 7"
-                stroke="#000"
-                stroke-width="2"
-                fill="none"
-              />
-            </svg>
-          </button>
-        </div>
-
-        <!-- Terms -->
-        <p class="terms">
-          By continuing, You accept our <a href="#">terms of service</a> and
-          <a href="#">privacy policy.</a>
-        </p>
+        <!-- Email -->
+        <button class="social-btn">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="#000">
+            <rect
+              x="3"
+              y="5"
+              width="18"
+              height="14"
+              rx="2"
+              stroke="#000"
+              stroke-width="2"
+              fill="none"
+            ></rect>
+            <path
+              d="M3 7L12 13L21 7"
+              stroke="#000"
+              stroke-width="2"
+              fill="none"
+            ></path>
+          </svg>
+        </button>
       </div>
+
+      <p class="text-center text-muted small mt-3">
+        By continuing, you accept our
+        <a href="#" class="text-decoration-underline text-dark"
+          >terms of service</a
+        >
+        and
+        <a href="#" class="text-decoration-underline text-dark"
+          >privacy policy</a
+        >.
+      </p>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
